<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GoldMine</string>
    <string name="main_title">GoldMine</string>
    <string name="new_game_label">New Game</string>
    <string name="game_select_label">Select Game Mode</string>
	<string name="settings_label">Settings</string>
	<string name="instructions_label">Instructions</string>
	<string name="about_label">About</string>
    <string name="exit_label">Exit</string>
    
	<string name="about_text">
		GoldMine is a game developed by an awesome student group at NTNU in 2012. 
	</string>
	
	<string name="instructions_text">
		The goal of the game is to score as many points as possible. By clicking a cell with gold you get points and by clicking a cell with a mine you lose points.
		The number with a gold color indicates the amount of adjacent gold cells this cell has and the grey number indicates how many adjacent mines this cell has.
		The game ends when there is no more cells with gold.
	</string>
	<string name="tryagain">Try again</string>
	<string name="mainmenu">Main Menu</string>
	<string name="goldmine_instructions">
	    In GoldMine mode your objective is to score as many points as possible 
	    by finding and clicking the cells containing gold and avoiding the cells containing mines. The golden 
	    number indicates how many adjacent gold cells this cell has. The grey number indicates how many adjacent
	    mines this cell has. Players take turn and the one with the highest score when there is no more gold left 
	    is the winner. Every time you click a gold cell you get an extra click. Good luck!
	</string>
	<string name="puregold_instructions">
	    In Pure Gold Mode your objective is to score as many points as possible by finding 
	    and clicking the cells containing gold. The golden number in each cell indicates 
	    how many adjacent gold cells this cell has. Players take turn  and the one with 
	    the highest score when there is no more gold left is the winner. Every time you 
	    find gold you get an extra click. Good luck!
    </string>
</resources>